--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -7,4 +7,9 @@
         android:title="Sync"
         app:showAsAction="never">
     </item>
+    <item
+        android:id="@+id/menuSettingButton"
+        android:title="Setting"
+        app:showAsAction="never">
+    </item>
 </menu>
