--- a/app/src/main/res/layout/activity_listview.xml
+++ b/app/src/main/res/layout/activity_listview.xml
@@ -11,15 +11,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
-        android:hint="Search"
+        android:textSize="20sp"
+        android:hint="@string/hint_search_filter"
         android:theme="@style/EditTextTheme" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/searchFilter"
-        android:layout_marginTop="6dp">
+        android:layout_below="@+id/searchFilter" >
 
         <ListView
             android:id="@+id/listview"
