--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Base.Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/flatShamrock</item>
+        <item name="colorPrimaryDark">@color/flatShamrock</item>
+        <item name="colorAccent">@color/flatLightCoral</item>
     </style>
 
     <style name="EditTextTheme" parent="Widget.AppCompat.EditText">
