--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,13 +5,13 @@
     android:layout_height="match_parent"
     android:background="@color/flatWhiteSmoke"
     android:orientation="vertical"
-    tools:context=".LoginActivity" >
+    tools:context=".LoginActivity">
 
     <TextView
         android:id="@+id/aboutLoginInfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="95dp"
+        android:layout_marginTop="80dp"
         android:gravity="center"
         android:text="Welcome to Duovoc"
         android:textColor="@color/flatShamrock"
@@ -30,30 +30,43 @@
         android:layout_marginRight="65dp"
         android:textColor="@color/flatBunker" />
 
-    <EditText
-        android:id="@+id/userName"
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/signin_hint_user_name"
-        android:inputType="textPersonName"
-        android:textColor="#000000"
         android:layout_marginTop="70dp"
-        android:layout_marginLeft="@dimen/login_left_and_right"
         android:layout_marginRight="@dimen/login_left_and_right"
-        android:theme="@style/EditTextTheme" />
+        android:layout_marginLeft="@dimen/login_left_and_right"
+        android:theme="@style/TextInputLayout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-    <EditText
-        android:id="@+id/loginPassword"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/userName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/signin_hint_user_name"
+            android:inputType="textPersonName"
+            android:textColor="#000000" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/signin_hint_password"
-        android:inputType="textPassword"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="@dimen/login_left_and_right"
+        android:layout_marginTop="15dp"
         android:layout_marginRight="@dimen/login_left_and_right"
-        android:theme="@style/EditTextTheme" />
+        android:layout_marginLeft="@dimen/login_left_and_right"
+        android:theme="@style/TextInputLayout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/loginPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/signin_hint_password"
+            android:inputType="textPassword"
+            android:theme="@style/EditTextTheme" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <CheckBox
         android:id="@+id/storeSignInInfo"
@@ -76,7 +89,7 @@
         android:gravity="center"
         android:text="Sign in"
         android:textColor="@color/flatWhiteSmoke"
-        android:layout_marginTop="50dp"/>
+        android:layout_marginTop="35dp"/>
 
     <Button
         android:id="@+id/offlineMode"
@@ -88,7 +101,7 @@
         android:backgroundTint="#797373"
         android:text="Offline"
         android:textColor="@color/flatWhiteSmoke"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="15dp"/>
 
 
     <LinearLayout
@@ -140,6 +153,6 @@
         android:textSize="18sp"
         android:layout_marginLeft="@dimen/login_left_and_right"
         android:layout_marginRight="@dimen/login_left_and_right"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="15dp"/>
 
 </LinearLayout>
