--- a/app/src/main/res/layout/login_dialog.xml
+++ b/app/src/main/res/layout/login_dialog.xml
@@ -11,7 +11,7 @@
         android:id="@+id/dialog_signin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/authorize"
+        android:text="@string/authentication"
         android:gravity="center"
         android:textSize="30sp"
         android:textColor="@color/flatBunker"
