--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -3,6 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/flatWhiteSmoke"
     android:paddingTop="10dp"
     android:paddingEnd="10dp"
     android:paddingRight="10dp"
@@ -23,5 +24,4 @@
         android:text="User information"
         android:textSize="20sp"
         android:textColor="@color/flatBunker" />
-
 </LinearLayout>
