--- a/app/src/main/res/layout/overview_list_items.xml
+++ b/app/src/main/res/layout/overview_list_items.xml
@@ -3,6 +3,7 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/flatWhiteSmoke"
     android:paddingTop="20dp"
     android:paddingBottom="10dp">
 
