--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -13,7 +13,7 @@
         android:id="@+id/setting_general"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="General"
+        android:text="@string/setting_general"
         android:textSize="20sp"
         android:textColor="@color/flatBunker" />
 
@@ -21,7 +21,8 @@
         android:id="@+id/setting_user_information"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="User information"
+        android:layout_marginTop="10dp"
+        android:text="@string/setting_user_information"
         android:textSize="20sp"
         android:textColor="@color/flatBunker" />
 </LinearLayout>
