--- a/app/src/main/res/layout/login_dialog.xml
+++ b/app/src/main/res/layout/login_dialog.xml
@@ -28,8 +28,8 @@
             android:id="@+id/dialog_user_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp"
             android:hint="@string/signin_hint_user_name"
             android:autofillHints="dummy"
             android:inputType="text"
@@ -47,8 +47,8 @@
             android:id="@+id/dialog_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp"
             android:hint="@string/signin_hint_password"
             android:autofillHints="dummy"
             android:inputType="textPassword"
