--- a/app/src/main/res/layout/setting_general_list_items.xml
+++ b/app/src/main/res/layout/setting_general_list_items.xml
@@ -10,15 +10,16 @@
     android:descendantFocusability="blocksDescendants">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_weight="1">
 
         <TextView
             android:id="@+id/setting_list_item_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="title"
+            android:text="@string/dummy_setting_list_item_title"
             android:textSize="17sp"
             android:textStyle="bold"
             android:textColor="@color/flatBunker" />
@@ -27,14 +28,13 @@
             android:id="@+id/setting_list_item_summary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="summary" />
+            android:text="@string/dummy_setting_list_item_summary" />
     </LinearLayout>
 
     <CheckBox
         android:id="@+id/setting_list_item_checkbox"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:theme="@style/CheckboxTheme"
-        android:button="@null"
-        android:drawableEnd="?android:attr/listChoiceIndicatorMultiple" />
+        android:gravity="end" />
 </LinearLayout>
