--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/menuRefreshButton"
+        android:id="@+id/menu_sync_button"
         android:title="Sync"
-        app:showAsAction="never">
-    </item>
+        app:showAsAction="never" />
+
     <item
-        android:id="@+id/menuSettingButton"
+        android:id="@+id/menu_switch_language"
+        android:title="Switch language"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/menu_setting_button"
         android:title="Setting"
-        app:showAsAction="never">
-    </item>
+        app:showAsAction="never" />
 </menu>
