--- a/app/src/main/res/layout/login_dialog.xml
+++ b/app/src/main/res/layout/login_dialog.xml
@@ -91,7 +91,7 @@
             android:layout_marginEnd="10dp"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:text="or"
+            android:text="@string/dialog_or"
             android:textColor="@color/flatBunker"
             android:layout_gravity="center" />
 
