--- a/app/src/main/res/layout/dialog_from_language_list.xml
+++ b/app/src/main/res/layout/dialog_from_language_list.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/text_view"
+        android:id="@+id/dialog_from_language"
         android:textColor="#000"
         android:textSize="20sp"
         android:layout_gravity="center_vertical"
