--- a/app/src/main/res/layout/switch_language_dialog.xml
+++ b/app/src/main/res/layout/switch_language_dialog.xml
@@ -49,4 +49,27 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="@color/flatWhiteSmoke" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:backgroundTint="#797373"
+            android:textColor="@color/flatWhiteSmoke"
+            android:text="Cancel" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:backgroundTint="@color/flatShamrock"
+            android:textColor="@color/flatWhiteSmoke"
+            android:text="Change" />
+    </LinearLayout>
 </LinearLayout>
