--- a/app/src/main/res/layout/switch_language_dialog.xml
+++ b/app/src/main/res/layout/switch_language_dialog.xml
@@ -57,6 +57,7 @@
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/dialog_switch_language_cancel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -65,6 +66,7 @@
             android:text="Cancel" />
 
         <Button
+            android:id="@+id/dialog_switch_language_change"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
