--- a/app/src/main/res/layout/dialog_from_language_list.xml
+++ b/app/src/main/res/layout/dialog_from_language_list.xml
@@ -6,7 +6,7 @@
 
     <TextView
         android:id="@+id/dialog_from_language"
-        android:textColor="#000"
+        android:textColor="@color/flatLightCoral"
         android:textSize="20sp"
         android:layout_gravity="center_vertical"
         android:layout_marginStart="30dp"
