--- a/app/src/main/res/layout/switch_language_dialog.xml
+++ b/app/src/main/res/layout/switch_language_dialog.xml
@@ -61,17 +61,23 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="5dp"
             android:backgroundTint="#797373"
             android:textColor="@color/flatWhiteSmoke"
+            android:background="@drawable/shape_rounded_corners_10dp"
             android:text="Cancel" />
 
         <Button
             android:id="@+id/dialog_switch_language_change"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="0dp"
             android:layout_weight="1"
             android:backgroundTint="@color/flatShamrock"
             android:textColor="@color/flatWhiteSmoke"
+            android:background="@drawable/shape_rounded_corners_10dp"
             android:text="Change" />
     </LinearLayout>
 </LinearLayout>
