--- a/app/src/main/res/layout/switch_language_dialog.xml
+++ b/app/src/main/res/layout/switch_language_dialog.xml
@@ -66,7 +66,7 @@
             android:backgroundTint="#797373"
             android:textColor="@color/flatWhiteSmoke"
             android:background="@drawable/shape_rounded_corners_10dp"
-            android:text="Cancel" />
+            android:text="Dismiss" />
 
         <Button
             android:id="@+id/dialog_switch_language_change"
