--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -17,10 +17,38 @@
         android:textColor="@color/flatLightCoral"
         android:layout_marginBottom="10dp" />
 
-    <ListView
-        android:id="@+id/setting_general_list_view"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/setting_general_list_item_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/setting_title_sync_on_wi_fi_only"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:textColor="@color/flatBunker" />
+
+            <TextView
+                android:id="@+id/setting_general_list_item_summary"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/setting_summary_sync_data_only_when_connected_to_wi_fi" />
+        </LinearLayout>
+
+        <Switch
+            android:id="@+id/setting_general_list_switch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
     <View
         android:layout_width="wrap_content"
